:arrow_up: upgrade nuxt

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nuxt-app",
   "private": true,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "build": "nuxt build",
@@ -10,11 +11,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.12.4",
-    "vue": "latest"
+    "nuxt": "3.13.0",
+    "vue": "3.4.38"
   },
   "devDependencies": {
-    "@nuxtjs/color-mode": "^3.4.2",
+    "@nuxtjs/color-mode": "3.4.4",
     "@nuxtjs/tailwindcss": "^6.12.1"
   }
 }
