--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.7.1",
-    "nuxt": "3.13.0",
+    "nuxt": "^3.13.2",
     "vue": "3.4.38"
   },
   "devDependencies": {
