--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@nuxt/image": "^1.7.1",
     "nuxt": "^3.13.2",
-    "vue": "3.4.38"
+    "sitemap": "^8.0.0",
+    "vue": "^3.5.10"
   },
   "devDependencies": {
     "@nuxt/content": "^2.13.2",
